--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
+    "sass-math": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
