--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
